# Keystrike

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  Settings.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: calculator.rs  commands.rs  converter.rs  indexer.rs  lib.rs  main.rs  searcher.rs  web_search.rs
