[package]
name = "keystrike"
version = "0.1.0"
edition = "2021"

[lib]
name = "keystrike_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
fuzzy-matcher = "0.3"
lnk = "0.6"
encoding_rs = "0.8"
dunce = "1"
meval = "0.2"
regex = "1"
