[package]
name = "keystrike"
version = "0.2.0"
edition = "2021"

[lib]
name = "keystrike_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
fuzzy-matcher = "0.3"
lnk = "0.6"
encoding_rs = "0.8"
dunce = "1"
open = "5"
meval = "0.2"
regex = "1"
arboard = "3"
